# Polymarket-bot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_STATUS.md  LOOP_PLAN.md  Polymarket bot architecture v5.1.md  Polymarket bot fixit.md  README.md  ab_cohort_pnl.py  alerts.py  arbitrage.py  backtest.py  bot.py  candidate_features_log.py  check_wallet.py  config.py  config_overrides.json  ctf_merge.py  dashboard.py  database.py  decision_policy.py  dump_manager.py  fast_vol_guard.py  fills.py  ground_rules.md  humanpending.md  main.py  market.py  market_discovery.py  market_roi_tracker.py  models.py  monitor_watchdog.py  order_lifecycle.py  order_manager.py  orders.py  oversight_agent.py  paper_client.py  paper_trader.py  paper_trader_v2.py  (+32 more)
ab/: __init__.py  cohort.py  cohort_net.py  fetch_redeem.py  halt_diagnose.py  held_forward.py  held_to_res.py  lever_replay.py  net_engine.py  net_reconcile.py  promotion_gate.py
api/: main.py  models.py  queries.py  requirements.txt
calibration/: __init__.py  attribution.py  features.py  fill_model.py  hazard_model.py  loss_model.py  manager.py  reward_model.py
docs/: A3_CANDIDATE_FEATURES_PLAN.md  AB_RESUME_DESIGN.md  HANDOFF.md  HANDOFF_PROMPT.md  MASTER_PLAN_2026-06-22.md  ONBOARDING_PROMPT.md  ORPHAN_LEAK_FIX_PLAN_2026-06-20.md  POSTMORTEM_2026-06-12.md  PROFITABILITY_PLAN.md  REALIZED_LOSS_KILL_ACCOUNTING_FIX_PLAN_2026-06-21.md  RECURSIVE_LOOP_BUILD_PLAN_2026-06-20.md  RESUME_PACKAGE_2026-06-19.md  STATUS_2026-05-29.md  STATUS_2026-05-31.md  STATUS_2026-06-02.md  STATUS_2026-06-03.md  STATUS_2026-06-13.md  (+5 more)
(+162 files in other folders)
