[project]
name = "polymarket-bot"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "py-clob-client==0.34.6",
    "requests==2.32.5",
    "python-dotenv==1.2.2",
    "web3==7.14.1",
    "streamlit",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade (modern Python style)
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["config", "market", "orders", "bot", "alerts", "position"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
